--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "todo-backend-node",
   "version": "1.0.0",
-  "main": "server.ts",
+  "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.ts",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node server.ts",
-    "build": "tsc"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -17,14 +16,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "ts-node": "^10.9.2",
     "mongoose": "^8.17.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/node": "^24.1.0",
-    "nodemon": "^3.1.10",
-    "typescript": "^5.9.2"
+    "nodemon": "^3.1.10"
   }
 }
